force-app/main/default/objects/IOM_Google_Place_Api_Field_Mapping__mdt/IOM_Google_Place_Api_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>To map google place Api node with salesforce field</description>
    <label>IOM Google Place Api Field Mapping</label>
    <pluralLabel>IOM Google Place Api Field Mappings</pluralLabel>
</CustomObject>