force-app/main/default/objects/IOM_Google_Place_Api_Field_Mapping__mdt/fields/IOM_City__c.field-meta.xml
<CustomField>
    <fullName>IOM_City__c</fullName>
    <description>Google Place API Node Name to which City part of Address field is Mapped.</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>