force-app/main/default/objects/IOM_Google_Place_Api_Field_Mapping__mdt/fields/IOM_Country__c.field-meta.xml
<CustomField>
    <fullName>IOM_Country__c</fullName>
    <description>Google Place API Node Name to which Country part of Address field is Mapped.</description>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>