force-app/main/default/objects/IOM_Google_Place_Api_Field_Mapping__mdt/fields/IOM_District__c.field-meta.xml
<CustomField>
    <fullName>IOM_District__c</fullName>
    <description>Google Place API Node Name to which District part of Address field is Mapped.</description>
    <label>District</label>
    <length>50</length>
    <type>Text</type>
</CustomField>