force-app/main/default/objects/IOM_Google_Place_Api_Field_Mapping__mdt/fields/IOM_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>IOM_Postal_Code__c</fullName>
    <description>Google Place API Node Name to which Postal Code part of Address field is Mapped.</description>
    <label>Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>